@@ -14,27 +14,21 @@ DIST otp_doc_man_R16B01.tar.gz 1316676 SHA256 71972049fbac73457fb6868be18068edce
 DIST otp_src_R15B03-1.tar.gz 76123810 SHA256 4bccac86dd76aec050252e44276a0283a0df9218e6470cf042a9b9f9dfc9476c SHA512 baa8f388bd56bbdf1d3818802d011970fb51d38d14434532b1e4f04c1b8203e5a0cd9cc870f93a993cce750cd1af6e4b7df40dffc44e455353bce9d7c46c8e34 WHIRLPOOL ce76d01dfd17e0bc70e3daa7eab218000d1e802f55b0892e2e9654d2ea262f214f3bd006c0988885e787a1cfe782e8b61d5d1ee3a1d05cbced465b5a28e2de2e
 DIST otp_src_R16B.tar.gz 67097626 SHA256 f01c2cfe512d3118fd3398a66bdb82bea6ad0f45b464a46a58e452264b7682cd SHA512 ca8587df663ef3066aaca868a8f79cc002a9ee4d6d57162c75cd54d5e6dcc02a9477fa4a58110cb82f25f50f316ddaf2660010c4b43b8c7b36135b00e0e9221e WHIRLPOOL c7a38bd22c10d41e23f62b906f551b20744d4476dddec5799171be203fd6e855d19f24f6954d693747d3ce39e8a413dfd5bdc5cdc81a6bfa89590af9596ee1d4
 DIST otp_src_R16B01.tar.gz 65813898 SHA256 da388bc07b8ebdd008f5bb6c3d2c280e358bd188b5aac3ea01e3a7436315abc0 SHA512 61b5f5370d5e88c7b5ad662ea71a16e910d16e5d5fe4ec9550947e0ca5824f23fdca268c64b3e70e815b4da08a08a27a5f83017d8fe306a4e62cae6c85a4812f WHIRLPOOL ceb1961a79ac702bb4c9389c071aba9c3a644527847f6a7e0888dbbf3f6e5c4a716cab72267076e3b644a3f746fd3b39db42d6c5766406c341a5c4fc566a0329
-EBUILD erlang-15.2.3.1.ebuild 5453 SHA256 cb8595ac6c0173e27b7293cbf6438f59e8ffb50e1c9e938275731f775f477fa4 SHA512 c2d8faec99021a2b57ca14ab694301dbe89ccbc394086cdcf2e529653d3545a8c6d1d72ae55e5e7421ae05f6fe2f810d89366dca80d932eba59cfbdb2d48d939 WHIRLPOOL 76562a411d37fb57633242f1f459510a91785d093453728a6d757a7ef467cc68e69654c8d5678a021e4bc34e4e93384a8ff9eafb3a52bdc4151c7a0f7d3dd8e3
-EBUILD erlang-16.1-r1.ebuild 5512 SHA256 7e68a96ca5351fe94a4157df406584f2db6f416052fb0b357f409260c5bfb3c2 SHA512 c290f26b61c05d5a0bf65a45f03ee78a67ce67fb52a23e80123971064d2bd0a7e9aeee58edc50767859af0d0991c156d648f8b7afba8ccbbef2ed8abb0000cf1 WHIRLPOOL 6cae40c07208b03f0399c7cd9e4dda304d8810e3f91913ede72f0e042f7c509a4b7178c358a44ced5fa60847be9a33f123a8b9e8f1ae08264fb4f1036f1eae81
-EBUILD erlang-16.1.ebuild 5440 SHA256 a9632b10492adda9452d92668b5057f7771cdd63a1bd68702d1dfee17d9010ec SHA512 3c41879d80f7627496841fad17b3138a37a2b1f7603942af2f1c5648590b0e29c792975ea9f40772c950f8458c64d0f78ae45496856573d4c6ce5571d6ccee1d WHIRLPOOL 6c2c36557176c0b9a90fe03bd510a544e17f66026dbcdd9b38323c35e7c96b200df6e08c0107e1147e1b746f296560e364fae7d1fc5b7050800050cc405d856b
-EBUILD erlang-16.2.ebuild 5510 SHA256 2a7b3f9c558cc185e9b2707aff51a2f3cc46c73ba3ebfc1da884ac898f9b08b4 SHA512 d9442f4faacdffe38df91a0e354718fb77d3b2c74f465847555eabf23e612c41054bd73154686c952127d727fcf5f167601a5bc7296e0b73177dfb04b96b7f82 WHIRLPOOL 2751727cb56f5cf47b54e01345060c9157bc3d176172c58c4336c7de8ead48bec6b6e11eb6099e088a7d92afa3e442f6a19700eab6edab7241f1adebfa706bec
-EBUILD erlang-16.ebuild 5361 SHA256 548dd3adc14b755a9ebfdaab874a09baa0bcd3b8efcedfcfaac96e89c6fc97b5 SHA512 1aa018fa55035d1f7e0e4ebab8ff2b74aade7f55385a12f2b60c8da8769808da07c08cc9fab0b132e8f66be09b44d6963495331083775922171cda7c1fd2d0c1 WHIRLPOOL 28d8fed55e4921d72e38f5b566feb2b74837c203b2b4f93c1b93af171c67edcc74e0d344c59ce06b099818603faf6960bb431196b5ee3c51a4121c42ba0e1f7c
-MISC ChangeLog 38504 SHA256 859c7bb99c438020fc809bfe3a96df80e89c903a70962e6a67752d97024a4f77 SHA512 650ba0086d99189026d2cd63f8ed264898033796a47c4eb8765e621786d88cce0bac13e7ef6480be968e63c5b44ac8bd27817ca41c34a618fb9546bb303e3d84 WHIRLPOOL 0ce1ba574d4438b0596f4eb052aca40d773a0496b8ec66a29b511cf9323c32919242df36d6a31245fff7b056e9bfecdbb8e60f38fec54f0cfdc77df834f0b005
+EBUILD erlang-15.2.3.1.ebuild 5423 SHA256 212dedb4ce233274c9ac98b3a48498a87f42f2b65caaa34547f06401b6e1aeaa SHA512 e8af1f3cb6037bdcff65dff64ec7bf01f3a98006be0d2dda770698128748f47777baf0713f477637121734c7a47f8a6aba66f3465dd0d5217062b6c3de53b216 WHIRLPOOL c0fe8f99cd6e38856e8c22d704e0365ec1b18ce8d489597d1218ca0b0afaf916a90e90d789e6587e3302ad6258456e5bc1caa17657f5e5b3478292ca9616a1d1
+EBUILD erlang-16.1-r1.ebuild 5482 SHA256 7fb37e41ad89ad91b0fe514ee705c952b8bb9b3937e3152bd2a580a1b95dff3b SHA512 68825e2306e1720393b95e1c32881bfdb8fd0ccbf4e103f2df5e50787f11119979ffb5aac124a39c0fb2b10986ba1fe8f7e91414babf2e2722a94aea897762d2 WHIRLPOOL 1bf04dc3e709158c69a8e6e6990cc546e13613b36fcfdc550f76e55bb50623b6b5e2613fbbc98557c2d75a760c157ec1ca4fbcac220913af9d0b35aa77ae3f12
+EBUILD erlang-16.1.ebuild 5410 SHA256 10eb23158342d493dce89cdf76c8b5ac38a9506cd4bd31e46225a06785fc47d1 SHA512 047aaa793441390df38efb67210b0fd8660fd380056957cf6c9650e19c8449facd37c802c5e8dbfc0280ded39bd1d16346a0f79c337bbbf1b7e54d931cd795af WHIRLPOOL f9f9ce434cf3771603176030337b955b3c2d49b33904e3b236fcaee682b3e0e5802ecde720613b8f432c71138c559bc1592623623e4a0dfb06f5a5b10671fe78
+EBUILD erlang-16.2.ebuild 5480 SHA256 6e77ea665f7975c571c0c2a30b0362d30c1c3126b9520f548bf402e57cca035b SHA512 b89de31a91b43f86a061b4d5ebe683791058bc025db69428454ebb728290e6cbb8ed1e89ea0a1a55490544a1810c72fd07143b9482933da1227860ca22ca955e WHIRLPOOL 6fb74b5e283636db4d6b47ed962b6a92139be2adf8d115c147c27cf050ea5e92aab816295e22da51f864fbeb32968c9424ac89ec29a2a8291f38389e9b403612
+EBUILD erlang-16.ebuild 5331 SHA256 649aceb800588e3ba97292156df993296095de3422a0ea41bf00b1475cc247f4 SHA512 6ad7c9de1eeb08c1ab27c721ec59f216e2ef33cee11526e7b35b1380ced5ccba163e8f41db3e173957a4298d50a7a879524dff6d86a2eb449c841b57dbe2efbd WHIRLPOOL 18ebbc17d0796869f131847fe1ca8211053b74261178e91a532bcf402c359051bee244588bbd545d53f997437ce3a9131d687915c7cb4197dfcce7cfe79a306d
+MISC ChangeLog 38724 SHA256 82574700d70dbb035f46cf660d444b587a9cf6ed7eb2e836fe100665a041fae4 SHA512 07835b38fd18af6634b52c303c66a3e6c75f9296885e2035793f06b21fcbde355d8ad0e22236ae327d2d6e986b802bbfdae337ea44e7aafe60d7d20be2cb72e0 WHIRLPOOL 70cd3f4398e080803c6a24b5d5d914ff66d6ad6d84c9163cfdafe2e605c41979ca6a88caa05f60db4ddb7655b80f9b14b2648d00e39dec46789f10cd93a2f1c0
 MISC metadata.xml 852 SHA256 5782640d216cf818d9088bd5eb963002210d83e9eb47e98edfd3844fe579dc27 SHA512 1b22c6d550e7ca634694408f000bd99827aa86037db59b1bb3ca7a2b4259c38d69caac14b0a0db6611f7888dfcdc7972ee70e57a716eb2ac7684aa043b9d3208 WHIRLPOOL 748a8b4560773d970987880ef457194437024ee0f72b3ae9972f6033a5fc14da8e2835dab385c559ae0fe22e2bd31e8e4da3dc946e504388588d23baa39208bd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSd+FDAAoJEJ+WuSkwOAOBogEQANq3IZcoeav9BbEL0k24TgTb
-vI+ImLWMSeHmrcxiCyFXxgu6GTvs17TJsQj3kO+WI3XzYTtN5rntwUAfZKLzNmV3
-3OUL2a4jxvceeo4b4hnofjUZyJI0Ly28g7zbrKW8oTzy3QmPHAKJXgTchb4I5yBM
-3pv2boYKvbX9ePnjwTQ5p78/LC7vAAwRM9+PBuzzZ4CXJdeyzqXXQO44JYlVmr4m
-8TbnVuqetLKSBlv0wLUkpR/09OyWCLHHYEARsSJhPw3OEgivQck7j21ATi+0hOHR
-lQdk+XxcefqKzth3E/PqfG0fZTTISpwWL0zy16t6+YzCZuNWdN4loc46eVVl4OvF
-N5iM6SvDcrq8dd7wCT6O958tcGN6+pBtvAlmRJzUjvsDg2aYY6aQJyn0lsReFm5h
-9eaP65T+AVw+ecuijHnA8jUxc7GJdMjKXB1VblrUXcOho1fEXDw6DxO/EOfKsWBU
-nqKebdGzF89ze6N8mMHxGdzoyFvUmDeLZma3uyM1+N47Zgsv/nrdhcKeOlTaLggU
-WJXBbZss21jFj87OFwWRut2B7FiNf33tMxDTxJaagHcRiuZjMsX/dCSy7dlslvKu
-eykf36vDSSOO++CUWqUFm1lFrvD98MQZb2/IioEsTPEHQWgQRP++xhhukm+8RsM6
-M2sNj3GWQ0QkmHBTAA64
-=QSak
+iQEcBAEBCAAGBQJShzUiAAoJEO04vUmVeoRjQ9oH/0ZSbXadpFWhVV5cmqvFREsV
+BG/uY9VGcltGR0cQ4cOKmu6vziCBfSUuNsX9S7Z8WJQHwQ4uFvV3pBrZg9vSvLrI
+4FfLMsQtutWhCqQXChD6bcI2FDYqsutgHcufOvVWkHt4394Sf8d8mk9viADobqxE
+1+H4w1YguoUuzuynMK1DuLuU/+PNykQV65giJT6IHtJl5pe9AssujnAEEzG29OMi
+Gj786IoouYZ/J2QgCY25ahVzGCgGzKo2e6NISq8XwdBVnxTEFZFFpGVIw6jO3aXF
+e0yDaLs5nBO3KyTeMFerOK90doaH9qKhm3I3MaV/A7+Ofr5q1MuczGPe8M8MbGE=
+=C5es
 -----END PGP SIGNATURE-----
